# imgmanip

./: LICENSE  README.md  check_requirements.py  config.py  imgmanip.desktop  main.py  pyproject.toml  requirements.txt
assets/: image.qrc
dialogs/: error_dialog.py  info_dialog.py  new_task_dialog.py  preferences_dialog.py  rename_dialog.py
functions/: color_detection.py  compress.py  convert.py  create_time_str.py  file_size.py  flip.py  get_ext.py  invert.py  resize.py  run_tasks.py  save_img.py
functions/tasks/: convert.py  flip.py  invert.py
imgmanip/: __main__.py  config.py  logs.py  main.py  main_window.py
imgmanip/dialogs/: confirm_dialog.py  info_dialog.py  new_task_dialog.py  preferences_dialog.py  rename_dialog.py  sort_images_dialog.py
imgmanip/functions/: check_image.py  create_time_str.py  file_size.py  run_tasks.py  save_img.py
imgmanip/functions/tasks/: color_detection.py  compress.py  convert.py  flip.py  (+3 more)
imgmanip/models/: axis.py  color_mode.py  image_extension.py  resize_type.py  save_type.py  sort.py  task.py
imgmanip/widgets/: horizontal_line.py  main_screen.py
models/: axis.py  save_type.py  task.py
tests/: test_convert.py
widgets/: horizontal_line.py  main_screen.py  main_screen_copy.py
widgets/main/: center_part.py  left_part.py  right_part.py
widgets/new_tasks/: color_detection_task_frame.py  compress_task_frame.py  convert_task_frame.py  invert_task_frame.py  resize_task_frame.py
widgets/task_frames/: color_detection_task_frame.py  convert_task_frame.py  flip_task_frame.py  invert_task_frame.py  resize_task_frame.py
(+10 files in other folders)
